# LitePolis-ui-template

./: README.md  pyproject.toml  requirements.txt  setup.py
litepolis_ui_template/static/: index.html
tests/: test_core.py  utils.py
